// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rollup Tag should render rollup tag with the label "4 more" 1`] = `
<InjectIntl(RollUpTag)
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isCollapsed={true}
  rollupCount={4}
>
  <RollUpTag
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isCollapsed={true}
    rollupCount={4}
  >
    <div
      className="tag-list-item"
    >
      <button
        aria-describedby="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        className="rollup-tag"
        data-terra-rollup-tag={true}
        data-terra-rollup-tag-show-focus-styles={true}
        id="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="rollup-tag-label"
        >
          Terra.tags.label.rollupTag
        </span>
      </button>
      <VisuallyHiddenText
        aria-hidden="true"
        id="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        text="Terra.tags.hint.rollupTag"
      >
        <span
          aria-hidden="true"
          className="visually-hidden-text"
          id="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        >
          Terra.tags.hint.rollupTag
        </span>
      </VisuallyHiddenText>
    </div>
  </RollUpTag>
</InjectIntl(RollUpTag)>
`;

exports[`Rollup Tag should render rollup tag with the label "show less" when isCollapsed is false 1`] = `
<InjectIntl(RollUpTag)
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isCollapsed={false}
  rollupCount={3}
>
  <RollUpTag
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isCollapsed={false}
    rollupCount={3}
  >
    <div
      className="tag-list-item"
    >
      <button
        aria-describedby="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        className="rollup-tag"
        data-terra-rollup-tag={true}
        data-terra-rollup-tag-show-focus-styles={true}
        id="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="rollup-tag-label"
        >
          Terra.tags.label.showLess
        </span>
      </button>
      <VisuallyHiddenText
        aria-hidden="true"
        id="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        text="Terra.tags.hint.showLess"
      >
        <span
          aria-hidden="true"
          className="visually-hidden-text"
          id="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        >
          Terra.tags.hint.showLess
        </span>
      </VisuallyHiddenText>
    </div>
  </RollUpTag>
</InjectIntl(RollUpTag)>
`;

exports[`Rollup Tag should render rollup tag with the label "show less" when isCollapsed is true and rollupCount is 0 1`] = `
<InjectIntl(RollUpTag)
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isCollapsed={true}
  rollupCount={0}
>
  <RollUpTag
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isCollapsed={true}
    rollupCount={0}
  >
    <div
      className="tag-list-item"
    >
      <button
        aria-describedby="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        className="rollup-tag"
        data-terra-rollup-tag={true}
        data-terra-rollup-tag-show-focus-styles={true}
        id="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="rollup-tag-label"
        >
          Terra.tags.label.showLess
        </span>
      </button>
      <VisuallyHiddenText
        aria-hidden="true"
        id="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        text="Terra.tags.hint.rollupTag"
      >
        <span
          aria-hidden="true"
          className="visually-hidden-text"
          id="terra-rollup-tag-00000000-0000-0000-0000-000000000000"
        >
          Terra.tags.hint.rollupTag
        </span>
      </VisuallyHiddenText>
    </div>
  </RollUpTag>
</InjectIntl(RollUpTag)>
`;
